# yf-ai-pet

./: .gitignore  CLAUDE.md
docs/: data-flow-architecture.md  embedded-learning-path.md  network-architecture.md  product-strategy-design.md  quick-mvp-design.md
firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/.cache/clangd/index/: ai_cat_board.cc.328D474A6F2FA7CA.idx  ai_cat_board.h.AB0C336EEC3EF252.idx  audio_codec.cc.37F4669B930EE65F.idx  audio_codec.h.31874F69EFC28D4B.idx  audio_codec_ctrl_i2c.c.97649DE3CDF61E10.idx  audio_codec_ctrl_if.h.556991E537C25317.idx  audio_codec_ctrl_spi.c.FF024A82E107BE9D.idx  audio_codec_data_i2s.c.A25E751A5D86C9EA.idx  audio_codec_data_if.h.0F4C82402E1667E9.idx  audio_codec_gpio.c.DDF731C6F22C0CC2.idx  audio_codec_gpio_if.h.033B2938A46EF6F1.idx  es7210.c.5BAA444DA46ECC73.idx  (+54 more)
firmware/components/lvgl_kawaii_face/: CMakeLists.txt  lvgl_kawaii_face.c
firmware/main/: CMakeLists.txt  ai_cat_board.cc  ai_cat_board.h  audio_codec.cc  audio_codec.h  audio_pipeline.cc  audio_pipeline.h  box_audio_codec.cc  box_audio_codec.h  cat_websocket.cc  cat_websocket.h  display.cc  display.h  i2c_device.cc  idf_component.yml  lvgl_display.cc  lvgl_display.h  main.cc  pca9557.cc  pca9557.h  wifi_manager.cc  wifi_manager.h  wifi_provisioning.cc  wifi_provisioning.h
server/: audio_utils.py  cat_brain.py  cat_language.py  main.py  port_test_server.py  requirements.txt  stt_engine.py  tts_engine.py  voice_manager.py  websocket_handler.py  wss_test_server.py
server/cat_sounds/: clips.json
server/voices/: profiles.json
(+1 files in other folders)
